<resources>
    <string name="app_name">SafeNest</string>
    <string name="security">Security</string>
    <string name="text_sos">In case of emergency, keep telling family members to contact me</string>
    <string name="sos_head">SOS</string>
    <string name="guard_head">GUARD</string>
    <string name="text_guard">Open when you are on a potentially dangerous journey.</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="guard">Guard</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_head">Dashboard</string>
    <string name="profile_head">Profile</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="default_web_client_id_auth">475211951583-iq7scm82arhj4lqat630jvvbc2c3ug5h.apps.googleusercontent.com</string>
</resources>