<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_bg">

    <TextView
        android:id="@+id/text_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/elev_8"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/pink_bg"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/text_security" />


    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/sos_head"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/text_sos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="@dimen/dimen_width_96"
        android:layout_height="@dimen/dimen_width_96"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/blue_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/blue_bg"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/guard_head"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintTop_toTopOf="@id/blue_card" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/text_guard"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimen_width_96"
        android:layout_height="@dimen/dimen_width_96"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/blue_card"
        app:layout_constraintEnd_toEndOf="@id/blue_card"
        app:layout_constraintTop_toTopOf="@id/blue_card" />

    <EditText
        android:id="@+id/invite_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="Enter Email of whom you want to invite"
        app:layout_constraintBottom_toBottomOf="@id/send_invite"
        app:layout_constraintEnd_toStartOf="@id/send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_invite" />

    <Button
        android:id="@+id/send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_card" />

    <TextView
        android:id="@+id/your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="Your Invites : "
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invite_mail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invite_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_invites"
        tools:listitem="@layout/item_invite_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>